Minor reformatting and symbol renaming.

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,11 +96,11 @@
     "    :param value: value to evaluate the polynomial at\n",
     "    :return: value of the polynomial at x\n",
     "    \"\"\"\n",
-    "    s = 0\n",
+    "    evaluated_sum = 0\n",
     "    for coefficient, power in elements:\n",
-    "        s += coefficient * value ** power\n",
+    "        evaluated_sum += coefficient * value ** power\n",
     "\n",
-    "    return s"
+    "    return evaluated_sum"
    ]
   },
   {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,13 +129,13 @@
     "    :param elements: coefficients-power tuples of the polynomial\n",
     "    :return: coefficients of the differentiated polynomial\n",
     "    \"\"\"\n",
-    "    result = set()\n",
+    "    output_polynomial = set()\n",
     "    for coefficient, power in elements:\n",
     "        if power != 0:\n",
-    "            result.add((coefficient * power, power - 1))\n",
+    "            output_polynomial.add((coefficient * power, power - 1))\n",
     "        else:\n",
-    "            result.add((0, 0))\n",
-    "    return result"
+    "            output_polynomial.add((0, 0))\n",
+    "    return output_polynomial"
    ]
   },
   {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
     "    :param coefficients_: a set of coefficient-power tuples\n",
     "    :return: str representation of the polynomial\n",
     "    \"\"\"\n",
-    "    coefficients_str = \"\"\n",
+    "    polynomial_str = \"\"\n",
     "\n",
     "    # Sort coefficients by power in descending order - abs(power) in case of negative powers\n",
     "    # This will make the final string easier to read - or closer to conventional notation\n",
@@ -178,18 +178,18 @@
     "            sign = f'{coefficient}'\n",
     "\n",
     "        if power > 1 or power < 0:\n",
-    "            coefficients_str += f\"{sign}x^{power} + \"\n",
+    "            polynomial_str += f\"{sign}x^{power} + \"\n",
     "        elif power == 1:\n",
-    "            coefficients_str += f\"{sign}x + \"\n",
+    "            polynomial_str += f\"{sign}x + \"\n",
     "        else:  # power == 0\n",
     "            if coefficient != 0:\n",
-    "                coefficients_str += f\"{coefficient} + \"\n",
+    "                polynomial_str += f\"{coefficient} + \"\n",
     "\n",
     "    # Remove the trailing \"+ \" at the end\n",
-    "    coefficients_str = coefficients_str.rstrip(\"+ \")\n",
+    "    polynomial_str = polynomial_str.rstrip(\"+ \")\n",
     "\n",
     "    # handle the case where coefficient is negative - for ease of reading\n",
-    "    return coefficients_str.replace(\"+ -\", \"- \")\n",
+    "    return polynomial_str.replace(\"+ -\", \"- \")\n",
     "\n",
     "\n",
     "def test_polynomial_outputs(polynomial: set[tuple[int, int]], x: int) -> None:\n",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -251,8 +251,8 @@
     }
    ],
    "source": [
-    "polynomial = {(5, 3), (7, 2), (3, 1), (6, 0)}\n",
-    "test_polynomial_outputs(polynomial, 2)"
+    "output_polynomial = {(5, 3), (7, 2), (3, 1), (6, 0)}\n",
+    "test_polynomial_outputs(output_polynomial, 2)"
    ]
   },
   {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -279,8 +279,8 @@
     }
    ],
    "source": [
-    "polynomial =  {(2, 1000)}\n",
-    "test_polynomial_outputs(polynomial, 2)"
+    "output_polynomial =  {(2, 1000)}\n",
+    "test_polynomial_outputs(output_polynomial, 2)"
    ]
   },
   {
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -307,8 +307,8 @@
     }
    ],
    "source": [
-    "polynomial =   {(3, 2), (-4, 1), (2, 0)}\n",
-    "test_polynomial_outputs(polynomial, 2)"
+    "output_polynomial =   {(3, 2), (-4, 1), (2, 0)}\n",
+    "test_polynomial_outputs(output_polynomial, 2)"
    ]
   },
   {
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -335,8 +335,8 @@
     }
    ],
    "source": [
-    "polynomial =  {(1, 5), (2, 3), (-1, 2)}\n",
-    "test_polynomial_outputs(polynomial, 2)"
+    "output_polynomial =  {(1, 5), (2, 3), (-1, 2)}\n",
+    "test_polynomial_outputs(output_polynomial, 2)"
    ]
   },
   {
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -363,8 +363,8 @@
     }
    ],
    "source": [
-    "polynomial =  {(7, 0)}\n",
-    "test_polynomial_outputs(polynomial, 2)"
+    "output_polynomial =  {(7, 0)}\n",
+    "test_polynomial_outputs(output_polynomial, 2)"
    ]
   },
   {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -391,8 +391,8 @@
     }
    ],
    "source": [
-    "polynomial =  {(1, 1)}\n",
-    "test_polynomial_outputs(polynomial, 2)"
+    "output_polynomial =  {(1, 1)}\n",
+    "test_polynomial_outputs(output_polynomial, 2)"
    ]
   },
   {
