--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -142,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Utility methods: Pretty print\n",
+    "## Utility methods: Pretty Print and Testing\n",
     "The following is a utility function to make the polynomials more human-readable."
    ]
   },
