--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -251,8 +251,8 @@
     }
    ],
    "source": [
-    "output_polynomial = {(5, 3), (7, 2), (3, 1), (6, 0)}\n",
-    "test_polynomial_outputs(output_polynomial, 2)"
+    "input_polynomial = {(5, 3), (7, 2), (3, 1), (6, 0)}\n",
+    "test_polynomial_outputs(input_polynomial, 2)"
    ]
   },
   {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -279,8 +279,8 @@
     }
    ],
    "source": [
-    "output_polynomial =  {(2, 1000)}\n",
-    "test_polynomial_outputs(output_polynomial, 2)"
+    "input_polynomial =  {(2, 1000)}\n",
+    "test_polynomial_outputs(input_polynomial, 2)"
    ]
   },
   {
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -307,8 +307,8 @@
     }
    ],
    "source": [
-    "output_polynomial =   {(3, 2), (-4, 1), (2, 0)}\n",
-    "test_polynomial_outputs(output_polynomial, 2)"
+    "input_polynomial =   {(3, 2), (-4, 1), (2, 0)}\n",
+    "test_polynomial_outputs(input_polynomial, 2)"
    ]
   },
   {
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -335,8 +335,8 @@
     }
    ],
    "source": [
-    "output_polynomial =  {(1, 5), (2, 3), (-1, 2)}\n",
-    "test_polynomial_outputs(output_polynomial, 2)"
+    "input_polynomial =  {(1, 5), (2, 3), (-1, 2)}\n",
+    "test_polynomial_outputs(input_polynomial, 2)"
    ]
   },
   {
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -363,8 +363,8 @@
     }
    ],
    "source": [
-    "output_polynomial =  {(7, 0)}\n",
-    "test_polynomial_outputs(output_polynomial, 2)"
+    "input_polynomial =  {(7, 0)}\n",
+    "test_polynomial_outputs(input_polynomial, 2)"
    ]
   },
   {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -391,8 +391,8 @@
     }
    ],
    "source": [
-    "output_polynomial =  {(1, 1)}\n",
-    "test_polynomial_outputs(output_polynomial, 2)"
+    "input_polynomial =  {(1, 1)}\n",
+    "test_polynomial_outputs(input_polynomial, 2)"
    ]
   },
   {
