--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -60,7 +60,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TASKSWrite 2 Python functions:\n",
+    "TASKS\n",
+    "\n",
+    "Write 2 Python functions:\n",
     "\n",
     "The first one to symbolically calculate the derivative of a polynomial with one variable. The input should be a polynomial and the output should also be a polynomial.\n",
     "The second one to evaluate (i.e. get the numerical value) of a polynomial for a given value of its variable. The input should be a polynomial and a value (point at which to evaluate the polynomial). The output should be a scalar.\n",
