Add sections and descriptions from Rubric grading

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -11,14 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Student name:"
+    "Student name: Sean Meade"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Student ID:"
+    "Student ID: 10128921"
    ]
   },
   {
@@ -73,11 +73,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Understanding Polynomials\n",
+    "\n",
+    "Showing excellent understanding of polynomial derivatives / integrals. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementation\n",
+    "\n",
+    "Correctly working implementation with efficient use of flow control elements, data types and operators. Clean code with appropriate variable names.  Appropriate documentation of each function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing\n",
+    "\n",
+    "Test cases cover corner cases without redundancy."
+   ]
   },
   {
    "cell_type": "markdown",
