Added some clarifying explaintions. Especially around how the functions work.
I have also restricted the differentiation to support non-negative powers.
The code now throws a valuetype exception if non-negative powers are detected.

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,18 +74,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Polynomial in one Variable\n",
+    "A polynomial is an expression that consists of a sum of a finite set of terms where each term consists of a coefficient multiplied by a variable $x$ raised to a non-negative number (negative exponents take us into the realm of rational functions, away from polynomials). \n",
+    "\n",
+    "The standard, canonical form is:\n",
+    "$$P(x) = a_n x^n + a_{n-1} x^{n-1} + \\ldots + a_2 x^2 + a_1 x + a_0$$\n",
+    "\n",
     "## Polynomial Evaluation\n",
     "\n",
-    "We can evaluate a polynomial in terms of x by simply evaluating each element of the set of tuples and summing the result\n",
-    "\n",
-    "$$P(x) = a_n x^n + a_{n-1} x^{n-1} + \\ldots + a_2 x^2 + a_1 x + a_0$$\n",
-    "So, for $p=2$ we would have\n",
+    "We can evaluate a polynomial in terms of x by simply evaluating each element of the set of tuples and summing the result. So, for $p=2$ we would have\n",
     "$$P(2) = a_n \\cdot 2^n + a_{n-1} \\cdot 2^{n-1} + \\ldots + a_2 \\cdot 2^2 + a_1 \\cdot 2 + a_0$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +111,7 @@
    "metadata": {},
    "source": [
     "## Differentiation\n",
-    "The python code executes the Power rule on each element of the set of tuples. \n",
+    "The python code executes the Power rule on each term/element of the polynomial (represented as a set of tuples). \n",
     "\n",
     "$$\\frac{d}{dx}(coefficient \\cdot x^{power}) = coefficient \\cdot power \\cdot x^{(power-1)}$$\n",
     "\n",
@@ -117,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,12 +129,18 @@
     "    Differentiate a polynomial in x, with respect to x using the power rule.\n",
     "    Where the polynomial is represented by a set of coefficients-power tuples.\n",
     "    Currently, it uses a more loop-based approach for ease-of-reading.\n",
-    "    :param elements: coefficients-power tuples of the polynomial\n",
+    "\n",
+    "    This function has been modified so it does not support variables\n",
+    "    raised to non-negative powers. It will raise a ValueError exception.\n",
+    "\n",
+    "    :param elements: set of coefficients-power tuples of the polynomial\n",
     "    :return: coefficients of the differentiated polynomial\n",
     "    \"\"\"\n",
     "    output_polynomial = set()\n",
     "    for coefficient, power in elements:\n",
-    "        if power != 0:\n",
+    "        if power < 0:\n",
+    "            raise ValueError(f\"differentiate: Power should not be negative (check polynomial {elements}).\")\n",
+    "        elif power != 0:\n",
     "            output_polynomial.add((coefficient * power, power - 1))\n",
     "        else:\n",
     "            output_polynomial.add((0, 0))\n",
@@ -148,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,13 +166,17 @@
     "    A simple utility function. Converts a set of coefficient-power tuples\n",
     "    to a string representation of a polynomial.  Print coefficients\n",
     "    as a string (e.g. \"5x^3 + 7x^2 + 3x + 6\")\n",
-    "    :param coefficients_: a set of coefficient-power tuples\n",
+    "\n",
+    "    This function does support the printing of non-negative powers. \n",
+    "\n",
+    "    :param coefficients_: a set of coefficient-power tuples of the polynomial\n",
     "    :return: str representation of the polynomial\n",
     "    \"\"\"\n",
     "    polynomial_str = \"\"\n",
     "\n",
     "    # Sort coefficients by power in descending order - abs(power) in case of negative powers\n",
-    "    # This will make the final string easier to read - or closer to conventional notation\n",
+    "    # This will make the final string easier to read - or closer to conventional,\n",
+    "    # canonical notation\n",
     "    coefficients_ = sorted(coefficients_, key=lambda x_: abs(x_[1]), reverse=True)\n",
     "\n",
     "    if coefficients_ == [(0, 0)]:\n",
@@ -177,7 +190,7 @@
     "        else:\n",
     "            sign = f'{coefficient}'\n",
     "\n",
-    "        if power > 1 or power < 0:\n",
+    "        if power > 1 or power < 0: \n",
     "            polynomial_str += f\"{sign}x^{power} + \"\n",
     "        elif power == 1:\n",
     "            polynomial_str += f\"{sign}x + \"\n",
@@ -200,16 +213,20 @@
     "    :param x: value to evaluate the polynomial at\n",
     "    :return: None\n",
     "    \"\"\"\n",
-    "    print(f\"f(x): {to_str(polynomial)}\")\n",
     "\n",
-    "    f_x = evaluate_polynomial(polynomial, x)\n",
-    "    print(f\"f({x}): {f_x}\")\n",
+    "    try:\n",
+    "        print(f\"f(x): {to_str(polynomial)}\")\n",
     "\n",
-    "    f_prime = differentiate(polynomial)\n",
-    "    print(f\"f'(x): {to_str(f_prime)}\")\n",
+    "        f_x = evaluate_polynomial(polynomial, x)\n",
+    "        print(f\"f({x}): {f_x}\")\n",
     "\n",
-    "    f_prime_x = evaluate_polynomial(f_prime, x)\n",
-    "    print(f\"f'({x}): {f_prime_x}\")"
+    "        f_prime = differentiate(polynomial)\n",
+    "        print(f\"f'(x): {to_str(f_prime)}\")\n",
+    "\n",
+    "        f_prime_x = evaluate_polynomial(f_prime, x)\n",
+    "        print(f\"f'({x}): {f_prime_x}\")\n",
+    "    except ValueError as e:\n",
+    "        print(f\"Error: {e}\")"
    ]
   },
   {
@@ -236,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -392,6 +409,33 @@
    ],
    "source": [
     "input_polynomial =  {(1, 1)}\n",
+    "test_polynomial_outputs(input_polynomial, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example 7 - Rational function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f(x): x^-2\n",
+      "f(2): 0.25\n",
+      "Error: differentiate: Power should not be negative (check polynomial {(1, -2)}).\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_polynomial =  {(1, -2)}\n",
     "test_polynomial_outputs(input_polynomial, 2)"
    ]
   },
@@ -433,7 +477,7 @@
     "\n",
     "* So, I have chosen to represent the polynomial as a set of tuples, where each tuple represents a unique element of the polynomial set. The first element of the tuple is the coefficient and the second element is the power of the corresponding term.  \n",
     "\n",
-    "* Using tuples has many benefits including space efficiency and ease-of-use (i.e. I don't have to write out lots of zeros which may be error-prone).\n",
+    "* Using tuples has many benefits including space efficiency and ease-of-use (i.e. I don't have to write out lots of zeros which may be error-prone). This slightly more complex approach is ideal when you have sparse data sets (i.e. lots of zeros).\n",
     "\n",
     "So, in my case I can represent: \n",
     "\n",
@@ -444,23 +488,45 @@
     "$${\\{(5, 3), (7, 2), (3, 1), (6, 0)\\}}$$\n",
     "\n",
     "#### Implementation\n",
+    "\n",
+    "\n",
+    "##### Evaluating a polynomial\n",
+    "We can evaluate a polynomial in terms of x by simply evaluating each element of the set of tuples and summing the result. So, for $p=2$ we would have\n",
+    "$$P(2) = a_n \\cdot 2^n + a_{n-1} \\cdot 2^{n-1} + \\ldots + a_2 \\cdot 2^2 + a_1 \\cdot 2 + a_0$$\n",
+    "\n",
+    "In Python,\n",
+    "\n",
+    "* The function takes, as input, a set of tuples representing the polynomial and the value to evaluate at. \n",
+    "* Each tuple in the set contains two elements: the coefficient and the power of a term.\n",
+    "* I initialise a variable ```evaluated_sum``` to zero to act as a counter that will hold the cumulative sum of each evaluated term of the polynomial (i.e. coefficient time value raised to the power).\n",
+    "* I then iterate through the set of tuples. In each iteration, I calculate the value of the term at a specific point by raising the input value to the power specified in the tuple, and multiplying the result by the coefficient from the tuple. This calculated value is then added to ```evaluated_sum```.\n",
+    "* After going through all the terms in the set, the function returns ```evaluated_sum```, a scalar value that represents the value of the polynomial evaluated at the specified input value.\n",
+    "\n",
     "##### Differentition\n",
     "I implemented the Power rule method for differentiating a polynomial, where the input to the function is a set of tuples (see above) and the output is a set of tuples representing the differentiated polynomial. Currently, it uses a more loop-based approach for ease-of-reading.\n",
     "\n",
-    "##### Evaluating a polynomial\n",
-    "TODO:\n",
+    "In python,\n",
+    "\n",
+    "* The function takes, as input, a set of tuples representing the polynomial. Each tuple in the set contains two elements: the coefficient and the power of a term.\n",
+    "* I initialise a set to contain the output polynomial (a set of tuples representing the terms of the polynomial; each tuple contains two elements: the coefficient and the power of a term).  \n",
+    "* I iterate through the input set of tuples representing the terms of the polynomial; each tuple contains two elements: the coefficient and the power of a term. \n",
+    "* In each iteration, I execute the power rule, adding the result to the output set. I will throw a value error if the Polynomial contains a non-negavive power)\n",
+    "* The function then returns the differentiated output set.\n",
     "\n",
     "#### Advantages/Disadvantages\n",
     "* using tuples, while efficient does require more knowledge of python data structures. \n",
     "* using lists can lead to real inefficiencies as the order and sparseness of the data increases.\n",
     "\n",
+    "### Comparison\n",
+    "The heart of the solutions are quite similar. Some solutinos used a list-based approach which, while effective, is not efficient for high order polynomials. \n",
     "\n",
-    "#### Peer Assessment\n",
+    "### Peer Assessment\n",
     "\n",
     "* The list is a nice idea. Simple to understand and very effective for low-rder polynomials. Great for starting and learning how to map mathematics to code.\n",
-    "* Use of recursion is also very elegent. It does have issues as the order or the polynomials increases. For example, you would never use such on low-power moobile devices for crypographic curve evaluation. \n",
+    "* Use of recursion is also very elegent. It does have issues as the order or the polynomials increases. For example, you would never use such on low-power moobile devices for things like cryptographic curve evaluation. \n",
     "* Mitchell DeBruyn reminded me about the importance of testing more corner cases.\n",
-    "* Mitchell DeBruyn also gave some good feedback regarding duplicate code (on the testing side) \n"
+    "* Mitchell DeBruyn also gave some good feedback regarding duplicate code (on the testing side) \n",
+    "* Peter OMahoney had some good insights around my use of sets vs. lists. Sets guarantee that each element of the set is unique; there is a risk that a user may submit a set of polynomials with duplicate tuples.\n"
    ]
   }
  ],
