--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -510,9 +510,9 @@
     "In python,\n",
     "\n",
     "* The function takes, as input, a set of tuples representing the polynomial. Each tuple in the set contains two elements: the coefficient and the power of a term.\n",
-    "* I initialise a set to contain the output polynomial (a set of tuples representing the terms of the polynomial; each tuple contains two elements: the coefficient and the power of a term).  \n",
-    "* I iterate through the input set of tuples representing the terms of the polynomial; each tuple contains two elements: the coefficient and the power of a term. \n",
-    "* In each iteration, I execute the power rule, adding the result to the output set. I will throw a value error if the Polynomial contains a non-negavive power)\n",
+    "* I initialise a set to contain the output polynomial (a set of tuples representing the terms of the polynomial).  \n",
+    "* I iterate through the input set of tuples representing the terms of the polynomial. \n",
+    "* In each iteration, I execute the power rule, adding the result to the output set. Note, I will throw a value error if the Polynomial contains a non-negative power)\n",
     "* The function then returns the differentiated output set.\n",
     "\n",
     "#### Advantages/Disadvantages\n",
