--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -517,7 +517,7 @@
     "\n",
     "#### Advantages/Disadvantages\n",
     "* using tuples, while efficient does require more knowledge of python data structures. \n",
-    "* using lists can lead to real inefficiencies as the order and sparseness of the data increases.\n",
+    "* using lists can lead to real time and space inefficiencies as the order and sparseness of the data increases.\n",
     "\n",
     "### Comparison\n",
     "The heart of the solutions are quite similar. Some solutinos used a list-based approach which, while effective, is not efficient for high order polynomials. \n",
