add type hints to functions, fix typos and select a random polynomial if the user is too tired

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -86,7 +86,10 @@
     "\n",
     "I'd like to use tuples because the data are static after entered and tuples are more efficient than lists and I don't need to do much manipulation of the structures.\n",
     "\n",
-    "I'll try to use UTF8 characters to prettify the results (thereby avoiding any libraries). Note Jason's idea to sort the results by descending power as is conventional."
+    "I'll try to use UTF8 characters to prettify the results (thereby avoiding any libraries). Note Jason's idea to sort the results by descending power as is conventional.\n",
+    "\n",
+    "## Assumptions\n",
+    "We expect the coefficients and powers to be integers."
    ]
   },
   {
@@ -100,6 +103,21 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pick_a_sample_equation() -> list:\n",
+    "    \"\"\"\n",
+    "    Picks a random entry from a vast list of creative and surprising polynomials.\n",
+    "    \"\"\"\n",
+    "    # TODO: hmm looks tricky to find a random number with just native python functions so think harder and \n",
+    "    # just return this one for now\n",
+    "    return [(8,4),(-3,3),(6,2),(2,1),(11,0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -107,18 +125,16 @@
      "text": [
       "--------------------------------------------------------------------------------\n",
       "This program requests that you enter a representation of a polynomial and then it will differentiate it and display the result. It includes some built-in tests to validate its functionality.\n",
-      "Enter a pair of integers a,b such that a is the coefficient and b is the power (leave blank to finish) >5,4\n",
-      "Enter a pair of integers a,b such that a is the coefficient and b is the power (leave blank to finish) >-2,3\n",
-      "Enter a pair of integers a,b such that a is the coefficient and b is the power (leave blank to finish) >7,2\n",
-      "Enter a pair of integers a,b such that a is the coefficient and b is the power (leave blank to finish) >9,0\n",
       "Enter a pair of integers a,b such that a is the coefficient and b is the power (leave blank to finish) >\n",
-      "You entered: [(5, 4), (-2, 3), (7, 2), (9, 0)]\n"
+      "You may be a little tired. Allow me to help.  We'll pretend you entered this and say nothing.\n",
+      "You entered: [(8, 4), (-3, 3), (6, 2), (2, 1), (11, 0)]\n"
      ]
     }
    ],
    "source": [
     "print(80*'-') # output a line for clearer user input\n",
-    "print('This program requests that you enter a representation of a polynomial and then it will differentiate it and display the result. It includes some built-in tests to validate its functionality.')\n",
+    "print('This program requests that you enter a representation of a polynomial and then it will '\n",
+    "      'differentiate it and display the result. It includes some built-in tests to validate its functionality.')\n",
     "\n",
     "equation = [] # store the tuples entered by the user\n",
     "\n",
@@ -127,10 +143,15 @@
     "    inp = input(\"Enter a pair of integers a,b such that a is the coefficient and b is the power (leave blank to finish) >\")\n",
     "    if inp:\n",
     "        inp_as_tuple = tuple( int(part) for part in inp.split(',')) # split the input string at the comma and convert to tuple\n",
-    "        # TODO: add some error checking here e.g. only 2 integer parts\n",
+    "        # TODO: perhaps add some error checking here e.g. only 2 integer parts\n",
     "        equation.append(inp_as_tuple)\n",
     "    else:\n",
     "        break\n",
+    "\n",
+    "if len(equation) == 0:\n",
+    "        # user entered nothing so let's show what we prepared earlier\n",
+    "        equation = pick_a_sample_equation()\n",
+    "        print(\"You may be a little tired. Allow me to help.  We'll pretend you entered this and say nothing.\")\n",
     "\n",
     "# show the user what we understood from their entries in a format similar to that which they used\n",
     "print('You entered:', equation) "
@@ -145,20 +166,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pom_superscript(num):\n",
+    "def pom_superscript(power:int) -> str:\n",
     "    # creating translation table using https://symbl.cc/en/unicode/blocks/latin-1-supplement/\n",
     "    # this function is free to all in exchange for a life hack🙂\n",
-    "    # e.g. wrap iceberg lettuce in tinfoil and store in your fridge to add weeks to it's lifespan!\n",
+    "    # e.g. wrap iceberg lettuce in tinfoil and store in your fridge to add weeks to its lifespan!\n",
     "    \"\"\"\n",
     "    Usage: pom_superscript(number) returns a UTF8 string with the number a superscript\n",
     "           representation of the number\n",
     "    \"\"\"\n",
     "    translate_table = str.maketrans(\"0123456789-\", \"\\u2070\\u00B9\\u00B2\\u00B3\\u2074\\u2075\\u2076\\u2077\\u2078\\u2079\\u207B\")\n",
-    "    return str(num).translate(translate_table)"
+    "    return str(power).translate(translate_table)"
    ]
   },
   {
@@ -170,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -212,12 +233,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# show the input in a prettier way\n",
-    "def pretty_equation(equation, var1='x', var2='y'):\n",
+    "def pretty_equation(equation:list, var1:str='x', var2:str='y') -> None:\n",
     "    \"\"\"\n",
     "    This returns a user accessible string which tidies our equation and omits zero value tuples\n",
     "    var1 changes the default (x) variable name and\n",
@@ -249,12 +270,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# differentiate a tuple by multiplying power by coeff and decrementing power\n",
-    "def differentiate_tuple(coeff,power):\n",
+    "def differentiate_tuple(coeff:int, power:int) -> tuple:\n",
     "    \"\"\"\n",
     "    Differentiates a tuple by multiplying power by coeff and decrementing power and returns a new tuple\n",
     "    \"\"\"\n",
@@ -270,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -278,9 +299,9 @@
      "output_type": "stream",
      "text": [
       "You entered\n",
-      " y =  5x⁴ -2x³ +7x² +9 and, when differentiated, this becomes\n",
-      " y =  20x³ -6x² +14x or as tuples:\n",
-      "[(20, 3), (-6, 2), (14, 1), (0, -1)]\n"
+      " y =  8x⁴ -3x³ +6x² +2x +11 and, when differentiated, this becomes\n",
+      " y =  32x³ -9x² +12x +2 or as tuples:\n",
+      "[(32, 3), (-9, 2), (12, 1), (2, 0), (0, -1)]\n"
      ]
     }
    ],
@@ -306,24 +327,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_polynomial(equation, var):\n",
+    "def evaluate_polynomial(equation:list, var:int) -> int:\n",
     "    \"\"\"\n",
-    "    Interprets the list of tuples in the equation and applies the value in val\n",
+    "    Interprets the list of tuples in the equation and applies the value in var\n",
     "    \"\"\"\n",
     "    result = 0\n",
     "    for (coeff,power) in equation:\n",
-    "        if var == 0 or coeff == 0: continue\n",
+    "        if var == 0 or coeff == 0: \n",
+    "            continue\n",
     "        result += coeff * (var**power) if power>= 0 else coeff * (( 1/var)**abs(power))\n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -331,20 +353,20 @@
      "output_type": "stream",
      "text": [
       "applying variable -2\n",
-      "\toriginal result: 133\n",
-      "\tdifferentiated : -212\n",
+      "\toriginal result: 183\n",
+      "\tdifferentiated : -314\n",
       "applying variable 0\n",
       "\toriginal result: 0\n",
       "\tdifferentiated : 0\n",
       "applying variable 1\n",
-      "\toriginal result: 19\n",
-      "\tdifferentiated : 28\n",
+      "\toriginal result: 24\n",
+      "\tdifferentiated : 37\n",
       "applying variable 3\n",
-      "\toriginal result: 423\n",
-      "\tdifferentiated : 528\n",
+      "\toriginal result: 638\n",
+      "\tdifferentiated : 821\n",
       "applying variable 10\n",
-      "\toriginal result: 48709\n",
-      "\tdifferentiated : 19540\n"
+      "\toriginal result: 77631\n",
+      "\tdifferentiated : 31222\n"
      ]
     }
    ],
