--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,9 +76,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Understanding Polynomials\n",
+    "Showing excellent understanding of polynomial derivatives / integrals.\n",
     "\n",
-    "Showing excellent understanding of polynomial derivatives / integrals. "
+    "### Understanding Polynomial derivatives / integrals\n",
+    "\n",
+    "A polynomial in my own words is a mathematical formula consisting of variables (sometimes called indeterminates) and coefficients. Coefficients are known values and variables are unknown. These variables can have a power associated to it that is a positive integer (for example X^2).\n",
+    "\n",
+    "Example of a polynomial: $ y(x) = 3x^3 - 5x^2 + 2x - 1 $\n",
+    "\n",
+    "note: a polynomial can have any number of coefficients and variables, the variables can have any order of power that is a positive integer.\n",
+    "\n",
+    "#### What are polynomials?\n",
+    "\n",
+    "They are equations can be used to describe linear processes. I always find I understand things when I have a real life example. A great example of a polynomial in the real world is a ball being fired directly up into the air, also known as the \"equation for vertical motion\". For the sake of this exercise we will fire our ball within a vacuum (i.e. it is not effected by air currents, wind resistance etc). The following formula is a polynomial that represents the vertical height as a function of time ($ y(t) $) with respect to the initial velocity in the y direction ($ V_{iy} $) and time ($ t $). For this example we will consider acceleration due to gravity ($ g $) a constant at 9.8 as we are not shooting our ball into space (unfortunately).\n",
+    "\n",
+    "$$ y(t) = V_{iy}t - \\frac{1}{2}gt^2 $$\n",
+    "\n",
+    "(TODO: Maybe a graph or some visual representation somewhere here)\n",
+    "\n",
+    "All this formula is doing is giving you the height above ground (y), at a particular time (t), after being thrown/launched with an initial velocity (v), directly up into the air. For the proper physics nerds they know that g is acceleration due to gravity and is normally taken to 9.81 m/s^2.\n",
+    "\n",
+    "For example lets say I launch a ball directly up into the air from a canon (and for simplicity lets say this canon is at ground level). If I know the exact velocity it leaves the ground at I can work out what it's height (y) is above ground for a given time (t).\n",
+    "\n",
+    "This is an example of a polynomial in action.\n",
+    "\n",
+    "#### So what are derivatives and how do I use them?\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
