--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -109,8 +109,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "In hand written form, the result would be:\n",
     "    9a^2 + 10a \n",
@@ -118,9 +120,9 @@
     "How?\n",
     "\n",
     "First, segement the polynomial expression into 3 different parts as:\n",
-    "  3a^3 ==> 3*3*a^3-1 ==> 9a^2\n",
-    "  5a^2 ==> 2*5*a^2-1 ==> 10a\n",
-    "  7 ==> is a constant\n"
+    " ... 3a^3 ==> 3*3*a^3-1 ==> 9a^2\n",
+    " ... 5a^2 ==> 2*5*a^2-1 ==> 10a\n",
+    " ... 7 ==> is a constant\n"
    ]
   },
   {
@@ -172,7 +174,7 @@
     "\n",
     "# next I will create an array of numbers and loop over them to test several values\n",
     "\n",
-    "# "
+    "# I would develop this draft further"
    ]
   },
   {
